add: topページの追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,19 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render "shared/header" %>
+    <% if notice %>
+      <div class="alert alert-success">
+        <%= notice %>
+      </div>
+    <% elsif alert %>
+      <div class="alert alert-error">
+        <%= alert %>
+      </div>
+    <% end %>
+    <main class="container min-h-screen">
+      <%= yield %>
+    </main>
+    <%= render "shared/footer" %>
   </body>
 </html>
