--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -23,8 +23,14 @@
         tabindex="0"
         class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
         <li><%= link_to "ホーム", root_path %></li>
-        <li><%= link_to "投稿する", "#" %></li>
-        <li><%= link_to "投稿一覧", "#" %></li>
+        <% if logged_in? %>
+          <li><%= link_to "投稿する", "#" %></li>
+          <li><%= link_to "投稿一覧", "#" %></li>
+          <li><%= link_to "ログアウト", logout_path, data: { turbo_method: :delete } %></li>
+        <% else %>
+          <li><%= link_to 'ログイン', login_path %></li>
+          <li><%= link_to "新規登録", new_user_path %></li>
+        <% end %>
       </ul>
     </div>
   </div>
